@@ -1,3 +1,6 @@
+2012-02-09  Vanessa Gil  <vanessa.gil@artica.es>
+	* godmode/events/custom_events.php: Changed combo box update.
+
 2012-02-08  Vanessa Gil  <vanessa.gil@artica.es>
 	* godmode/events/custom_events.php: Added default fields button.
 
